--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -93,12 +93,17 @@
         android:layout_height="wrap_content"
         android:text="Sign In"
         android:layout_margin="15dp"
+        android:id="@+id/btnLogin"
         />
     <com.google.android.material.button.MaterialButton
+        android:textColor="@color/black"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:iconTint="@null"
-        android:backgroundTint="@color/white"
+        app:icon="@drawable/icon_google_launcher"
+        style="@style/Button.OutlineButton"
+        android:layout_margin="15dp"
+        android:text="SignIn With Google"
         />
 
 </LinearLayout>
