--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -15,4 +15,6 @@
     </style>
 
     <style name="OutlineBox" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox"/>
+
+    <style name="Button.OutlineButton" parent="Widget.MaterialComponents.Button.OutlinedButton"/>
 </resources>
